syntax = "proto3";

option go_package = "proto/facilities";

service FacilitiesService {
  rpc GetAllFacilities(GetAllFacilitiesRequest) returns (GetAllFacilitiesResponse) {}
  rpc GetFacilitiesByAuthorId(GetFacilitiesByAuthorIdRequest) returns (GetFacilitiesByAuthorIdResponse) {}
  rpc CreateFacility(CreateFacilityRequest) returns (CreateFacilityResponse) {}
  rpc UpdateFacility(UpdateFacilityRequest) returns (UpdateFacilityResponse) {}
  rpc DeleteFacility(DeleteFacilityRequest) returns (DeleteFacilityResponse) {}
}

message Facility {
  int64 ID = 1;
  int64 AuthorId = 2;
  string Name = 3;
  string Description = 4;
  double Longitude = 5;
  double Latitude = 6;
  enum Category {
    Restaurant = 0;
    ParkingLot = 1;
    Toilet = 2;
    Hospital = 3;
    Cafe = 4;
    Pharmacy = 5;
    ExchangeOffice = 6;
    BusStop = 7;
    Shop = 8;
    Other = 9;
  };
  Category category = 7;
  string ImagePath = 8;
}

message GetAllFacilitiesRequest {
}

message GetAllFacilitiesResponse {
  repeated Facility facilities = 1;
}

message GetFacilitiesByAuthorIdRequest {
  string AuthorId = 1;
}

message GetFacilitiesByAuthorIdResponse {
  repeated Facility facilities = 1;
}

message CreateFacilityRequest {
  Facility facility = 1;
}

message CreateFacilityResponse {
}

message UpdateFacilityRequest {
  Facility facility = 1;
}

message UpdateFacilityResponse {
}

message DeleteFacilityRequest {
  string ID = 1;
}

message DeleteFacilityResponse {
}
